--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 //apply plugin: 'org.spongepowered.mixin'
 
-version = project.mc_version + '-v' + project.mod_version
+version = project.mc_version + '-' + project.mod_version
 group = 'com.bconlon.greathunger'
 archivesBaseName = 'great_hunger'
 
